Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12940

Column wrap line drawn inconsistently with ifdefs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.2.1
    • Qt Creator 3.2.0-rc1
    • Editors
    • None
    • caa56ea0fad3d277c69ac223952e7b4d8cb8d632

      The column wrap line, when displayed, appears to be drawn behind the ifdef block. It would look more consistent if the line was drawn on top. (Attaching two images of actual and the expected output which I'm describing.)

        1. expected.png
          expected.png
          34 kB
        2. actual.png
          actual.png
          32 kB
        For Gerrit Dashboard: QTCREATORBUG-12940
        # Subject Branch Project Status CR V

            vsimon Vicken Simonian
            vsimon Vicken Simonian
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes