Editor: Draw column wrap line after drawing ifdef blocks

Task-number: QTCREATORBUG-12940
Change-Id: I431176c1879236bc107a2c1db11890da5d75f750
Reviewed-by: Eike Ziller <eike.ziller@digia.com>